Rework the previous commit. Move the LegScorers into the CourseScorer. Get the LegScorers to lookup preferences ar runtime.